--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.4",
+    "@tailwindcss/line-clamp": "^0.2.2",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-currency-formatter": "^1.1.0",
+    "react-dom": "17.0.2",
+    "react-responsive-carousel": "^3.2.21"
   },
   "devDependencies": {
+    "autoprefixer": "^10.3.5",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "eslint-config-next": "11.1.2",
+    "postcss": "^8.3.7",
+    "tailwindcss": "^2.2.15"
   }
 }
